# System-Monitor

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile.in  README.md  build.sh  data.json  docker-build.sh  docker-compose.yml  docs.sh  entrypoint.sh
.github/workflows/: cpp.yml
docs/: data_struct.json  data_struct.md
include/collectors/: collector.h  collector_manager.h  cpu_collector.h  disk_collector.h  docker_collector.h  memory_collector.h  network_collector.h  process_collector.h  service_collector.h  systeminfo_collector.h
include/commands/: command_executor.h  command_types.h
include/common/: thread_safe_queue.h
include/config/: config.h
include/log/: log_capture.h  log_type.h  logger.h
include/models/: command_result.h  cpu_info.h  disk_info.h  docker_container_info.h  memory_info.h  network_interface.h  process_info.h  service_info.h  system_info.h  system_metrics.h
include/network/client/: data_sender.h  log_sender.h  system_client.h
include/network/common/: network_types.h
include/operations/: cli_operations.h  docker_operations.h  process_control.h  self_management.h  service_control.h  system_control.h
include/ui/: dashboard_ncurses.h  i_dashboard.h  view.h
include/utils/: command_run.h  process_utils.h  system_metrics_utils.h
install/: install.sh  system-monitor.service  uninstall.sh
src/: main.cpp
src/collectors/: collector_manager.cpp  cpu_collector.cpp  disk_collector.cpp  docker_collector.cpp  memory_collector.cpp  network_collector.cpp  process_collector.cpp  service_collector.cpp  systeminfo_collector.cpp
src/commands/: command_executor.cpp  command_type_a.cpp  command_type_b.cpp  command_type_c.cpp  command_type_d.cpp  command_type_e.cpp  command_type_f.cpp
src/config/: config.cpp
src/log/: logger.cpp
src/models/: command_result.cpp
src/network/client/: data_sender.cpp  log_sender.cpp  system_client.cpp
src/operations/: cli_operations.cpp  docker_operations.cpp  process_control.cpp  self_management.cpp  service_control.cpp  system_control.cpp
src/ui/: dashboard_ncurses.cpp
src/utils/: command_run.cpp  process_utils.cpp  system_metrics_utils.cpp
